added Sign Out page template

--- a/Template_1/profile.html
+++ b/Template_1/profile.html
@@ -56,9 +56,15 @@
 
                <div class="card-body">
 
-              
+               <%= user.email %>
+
+               <%= user.id %>
                </div>
-         </div>
+			   
+			   <div align="right">
+			   <a href="SignOut.html"><button type="submit" class="button" >Sign Out</button></a>
+               </div>
+		 </div>
 		 
     </div>
   </div>
