created welcome page

--- a/Template_2/login.html
+++ b/Template_2/login.html
@@ -5,7 +5,7 @@
    <link rel="stylesheet" href="login.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<title> Mainpage</title>
+<title> Login page</title>
 
 <style>
 body {margin:0;}
@@ -112,7 +112,7 @@ form {border: 3px solid #f1f1f1; }
     
 <body>
 	<div class="header">
-	<h1>Welcome</h1>
+	<h1>Log In</h1>
 	</div>
 	<div class="icon-bar">
 	<a href="#" class="fa fa-home"></a>
@@ -133,7 +133,7 @@ form {border: 3px solid #f1f1f1; }
 									   <input type="password" id="pass" name="pass">   <br>
                                        </form>	
 										
-	                                   <a href="css.html" target="_blank" title= "Click to go to another page">
+	                                   <a href="welcome.html" target="_blank" title= "Click to go to another page">
 	                                  <center> <button>Login</button> </center>
 	                                   </a>		 
                                        <p class="d">Forgot Password ?? Click Here</p>         		
