--- a/Template_3/contact.html
+++ b/Template_3/contact.html
@@ -9,73 +9,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <style>
 
-body, html {
-      height: 100%;
-      margin: 0;
-        }
-
-    .bg {
-      /* The image used */
-      background-image: url("images/hd5.jpg");
-
-      /* Full height */
-      height: 100%;
-
-      /* Center and scale the image nicely */
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-.ab {
-  color: white;
-  text-align:center;
-}
- #a {
-   color:yellow;
- }
-
- .fa {
-   padding: 20px;
-   font-size: 30px;
-   width: 50px;
-     text-align: center;
-     text-decoration: none;
-/*      border-radius: 10%; */
-   margin: 5px 2px;
- }
-
- .fa:hover {
-     opacity: 20;
- }
-
- .fa-facebook {
-   background: #3B5998;
-   color: white;
- }
-
- .fa-twitter {
-   background: #55ACEE;
-   color: white;
- }
-
- .fa-google {
-   background: #dd4b39;
-   color: white;
- }
-
- .fa-youtube {
-   background: #bb0000;
-   color: white;
- }
-
- .fa-instagram {
-   background: #125688;
-   color: white;
- }
-
-    </style>
+   <link rel="stylesheet" href="contact.css">
     </head>
     <body>
 <div class="bg">
